# huffmanzip

./: .gitignore  BinaryTree.h  BinaryTree.ipp  CMakeLists.txt  CompressCore.cpp  CompressCore.h  LICENSE  Makefile  README.md  Settings.cpp  Settings.h  Util.cpp  Util.h  huffmanzip.cpp
.github/workflows/: ccpp.yml
